Descriptive text. Layout finetuning and tooltips.

--- a/QgisModelBaker/ui/tid_configurator_panel.ui
+++ b/QgisModelBaker/ui/tid_configurator_panel.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>797</width>
     <height>443</height>
    </rect>
   </property>
@@ -14,6 +14,18 @@
    <string>Select Files</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item row="0" column="0" colspan="2">
     <layout class="QVBoxLayout" name="layer_tids_layout">
      <property name="sizeConstraint">
