--- a/QgisModelBaker/ui/tid_manager.ui
+++ b/QgisModelBaker/ui/tid_manager.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>TID (OID) Manager</string>
+   <string>OID Manager</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="1" column="0" colspan="2">
