--- a/QgisModelBaker/ui/topping_wizard/layer_style_categories.ui
+++ b/QgisModelBaker/ui/topping_wizard/layer_style_categories.ui
@@ -14,7 +14,10 @@
    <string>Layer Style Categories</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="2" column="1">
+   <item row="1" column="0" colspan="2">
+    <widget class="SpaceCheckListView" name="style_categories_list_view" native="true"/>
+   </item>
+   <item row="3" column="1">
     <widget class="QPushButton" name="ok_button">
      <property name="text">
       <string>Ok</string>
@@ -24,7 +27,7 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0">
+   <item row="3" column="0">
     <widget class="QDialogButtonBox" name="button_box">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -34,12 +37,15 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="0" colspan="2">
-    <widget class="SpaceCheckListView" name="style_categories_list_view"/>
+   <item row="0" column="0">
+    <widget class="SemiTristateCheckbox" name="select_all_checkbox">
+     <property name="text">
+      <string>Select all</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
-
  <customwidgets>
   <customwidget>
    <class>SpaceCheckListView</class>
@@ -47,8 +53,12 @@
    <header>QgisModelBaker.utils.gui_utils</header>
    <container>1</container>
   </customwidget>
+  <customwidget>
+   <class>SemiTristateCheckbox</class>
+   <extends>QWidget</extends>
+   <header>QgisModelBaker.utils.gui_utils</header>
+  </customwidget>
  </customwidgets>
-
  <resources/>
  <connections>
   <connection>
