--- a/QgisModelBaker/ui/workflow_wizard/import_schema_configuration.ui
+++ b/QgisModelBaker/ui/workflow_wizard/import_schema_configuration.ui
@@ -58,7 +58,7 @@
       <item row="2" column="0">
        <widget class="QLabel" name="label_3">
         <property name="text">
-         <string>Metaconfiguration / Topping</string>
+         <string>Metaconfiguration</string>
         </property>
        </widget>
       </item>
