Some GUI finetuning

--- a/QgisModelBaker/ui/basket_panel.ui
+++ b/QgisModelBaker/ui/basket_panel.ui
@@ -27,7 +27,11 @@
     <number>0</number>
    </property>
    <item row="0" column="0">
-    <widget class="QTableView" name="basket_view"/>
+    <widget class="QTableView" name="basket_view">
+     <property name="selectionMode">
+      <enum>QAbstractItemView::NoSelection</enum>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
