--- a/QgisModelBaker/ui/layer_tids_panel.ui
+++ b/QgisModelBaker/ui/layer_tids_panel.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>1127</width>
     <height>600</height>
    </rect>
   </property>
@@ -28,9 +28,15 @@
    </property>
    <item row="1" column="0">
     <widget class="QTableView" name="layer_tids_view">
-     <property name="sortingEnabled">
-      <bool>true</bool>
+     <property name="selectionMode">
+      <enum>QAbstractItemView::NoSelection</enum>
      </property>
+     <property name="sortingEnabled">
+      <bool>false</bool>
+     </property>
+     <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+      <bool>false</bool>
+     </attribute>
     </widget>
    </item>
   </layout>
