--- a/QgisModelBaker/ui/dataset_manager.ui
+++ b/QgisModelBaker/ui/dataset_manager.ui
@@ -35,21 +35,7 @@
      </item>
      <item>
       <layout class="QGridLayout" name="button_layout">
-       <item row="1" column="1">
-        <widget class="QToolButton" name="edit_button">
-         <property name="text">
-          <string>Rename Dataset</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QToolButton" name="add_button">
-         <property name="text">
-          <string>Create Dataset</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="3">
+       <item row="1" column="4">
         <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
@@ -62,13 +48,43 @@
          </property>
         </spacer>
        </item>
-       <item row="1" column="2">
+       <item row="1" column="0">
+        <widget class="QToolButton" name="add_button">
+         <property name="toolTip">
+          <string>Create a dataset</string>
+         </property>
+         <property name="text">
+          <string>Create Dataset</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="3">
         <widget class="QToolButton" name="basket_manager_button">
          <property name="toolTip">
           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;To create a &lt;span style=&quot; font-weight:600;&quot;&gt;basket&lt;/span&gt; per &lt;span style=&quot; font-weight:600;&quot;&gt;topic&lt;/span&gt; and &lt;span style=&quot; font-weight:600;&quot;&gt;dataset &lt;/span&gt;in the &lt;span style=&quot; font-style:italic;&quot;&gt;t_ili2db_basket&lt;/span&gt; table or not.&lt;/p&gt;&lt;p&gt;While a dataset is just an entry in the &lt;span style=&quot; font-style:italic;&quot;&gt;t_ili2db_dataset&lt;/span&gt; table, there must be baskets for each entry that can be selected. Usually there exists only one basket per topic and dataset.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="text">
           <string>Manage baskets of selected dataset</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QToolButton" name="edit_button">
+         <property name="toolTip">
+          <string>Edit the selected dataset name</string>
+         </property>
+         <property name="text">
+          <string>Rename Dataset</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="2">
+        <widget class="QToolButton" name="delete_button">
+         <property name="toolTip">
+          <string>Delete the selected dataset</string>
+         </property>
+         <property name="text">
+          <string>Delete Dataset</string>
          </property>
         </widget>
        </item>
@@ -79,7 +95,7 @@
    <item row="1" column="0">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
