[gui] Convert current Basket manager into Create Basket dialog

--- a/QgisModelBaker/ui/create_baskets.ui
+++ b/QgisModelBaker/ui/create_baskets.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>BasketManagerDialog</class>
- <widget class="QDialog" name="BasketManagerDialog">
+ <class>CreateBasketDialog</class>
+ <widget class="QDialog" name="CreateBasketDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,13 +11,13 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Manage Baskets</string>
+   <string>Create Baskets</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="2" column="0">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Save</set>
      </property>
     </widget>
    </item>
