--- a/QgisModelBaker/ui/basket_panel.ui
+++ b/QgisModelBaker/ui/basket_panel.ui
@@ -29,7 +29,10 @@
    <item row="0" column="0">
     <widget class="QTableView" name="basket_view">
      <property name="selectionMode">
-      <enum>QAbstractItemView::NoSelection</enum>
+      <enum>QAbstractItemView::SingleSelection</enum>
+     </property>
+     <property name="selectionBehavior">
+      <enum>QAbstractItemView::SelectRows</enum>
      </property>
     </widget>
    </item>
