--- a/QgisModelBaker/ui/edit_basket.ui
+++ b/QgisModelBaker/ui/edit_basket.ui
@@ -36,6 +36,12 @@
    </item>
    <item row="1" column="1">
     <widget class="QLineEdit" name="txtTopic">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
@@ -50,6 +56,9 @@
    </item>
    <item row="2" column="1">
     <widget class="QLineEdit" name="txtBidOidType">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
