--- a/QgisModelBaker/ui/topping_wizard/layer_style_categories.ui
+++ b/QgisModelBaker/ui/topping_wizard/layer_style_categories.ui
@@ -14,10 +14,10 @@
    <string>Layer Style Categories</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="0" colspan="2">
-    <widget class="SpaceCheckListView" name="style_categories_list_view" native="true"/>
+   <item row="0" column="0" colspan="3">
+    <widget class="QListView" name="style_categories_list_view"/>
    </item>
-   <item row="3" column="1">
+   <item row="2" column="2">
     <widget class="QPushButton" name="ok_button">
      <property name="text">
       <string>Ok</string>
@@ -27,7 +27,21 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="0">
+   <item row="1" column="2">
+    <widget class="QPushButton" name="deselectall_button">
+     <property name="text">
+      <string>Deselect All</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QPushButton" name="selectall_button">
+     <property name="text">
+      <string>Select All</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1">
     <widget class="QDialogButtonBox" name="button_box">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -37,28 +51,21 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="0">
-    <widget class="SemiTristateCheckbox" name="select_all_checkbox">
-     <property name="text">
-      <string>Select all</string>
+   <item row="1" column="0">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
-    </widget>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>SpaceCheckListView</class>
-   <extends></extends>
-   <header>QgisModelBaker.utils.gui_utils</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>SemiTristateCheckbox</class>
-   <extends>QWidget</extends>
-   <header>QgisModelBaker.utils.gui_utils</header>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections>
   <connection>
