Address review: Make sure the language combobox has the same width as the project optimization combobox (project creation page)

--- a/QgisModelBaker/ui/workflow_wizard/project_creation.ui
+++ b/QgisModelBaker/ui/workflow_wizard/project_creation.ui
@@ -222,6 +222,9 @@ Select the language in which the QGIS project is to be set up.</string>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="sizeAdjustPolicy">
+         <enum>QComboBox::AdjustToContents</enum>
+        </property>
         <item>
          <property name="text">
           <string>English</string>
