--- a/QgisModelBaker/ui/topping_wizard/referencedata.ui
+++ b/QgisModelBaker/ui/topping_wizard/referencedata.ui
@@ -64,7 +64,7 @@
       <item row="0" column="2">
        <widget class="QToolButton" name="file_browse_button">
         <property name="toolTip">
-         <string>Browse Interlis files</string>
+         <string>Browse INTERLIS files</string>
         </property>
         <property name="text">
          <string>…</string>
