--- a/QgisModelBaker/ui/workflow_wizard/database_selection.ui
+++ b/QgisModelBaker/ui/workflow_wizard/database_selection.ui
@@ -77,12 +77,12 @@
         <widget class="QComboBox" name="type_combo_box">
          <item>
           <property name="text">
-           <string>Interlis (PostGIS)</string>
+           <string>INTERLIS (PostGIS)</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>Interlis (GeoPackage)</string>
+           <string>INTERLIS (GeoPackage)</string>
           </property>
          </item>
          <item>
