--- a/QgisModelBaker/ui/drop_quick_message.ui
+++ b/QgisModelBaker/ui/drop_quick_message.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Handle Import Files</string>
+   <string>Quick Visualizer or Wizard</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="2" column="0" colspan="2">
