--- a/QgisModelBaker/ui/options.ui
+++ b/QgisModelBaker/ui/options.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>737</width>
-    <height>348</height>
+    <height>285</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -33,7 +33,7 @@
    <item row="3" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -96,7 +96,7 @@
      </widget>
      <widget class="QWidget" name="tab_4">
       <attribute name="title">
-       <string>DB Settings</string>
+       <string>Database</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_8">
        <item row="0" column="0">
@@ -148,7 +148,7 @@
           </sizepolicy>
          </property>
          <property name="text">
-          <string>Generally used custom parameters</string>
+          <string>Generally used custom DB parameters</string>
          </property>
         </widget>
        </item>
